objects/Incentive__c.object
<CustomObject>
    <description>Represents a code that forms a bridge between customers or business partners and Incentive Programs.</description>
    <fields>
        <fullName>Completed_Sales__c</fullName>
        <description>The number of sales that have been completed with this Incentive.</description>
        <label>Completed Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>The email address associated with this Incentive.</description>
        <externalId>true</externalId>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Incentive_Program_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The incentive program that this token is tied to.</description>
        <label>Incentive Program</label>
        <referenceTo>Incentive_Program__c</referenceTo>
        <relationshipLabel>Incentives</relationshipLabel>
        <relationshipName>Incentive_Programs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incentive_Program_Payout__c</fullName>
        <description>The associated program&apos;s payout.</description>
        <formula>Incentive_Program_ID__r.Payout__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive Program Payout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Intro_Email_Was_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An e-mail introducing the person at this e-mail address to the program has been sent.</description>
        <label>Intro Email Was Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <description>The string representation of this token.</description>
        <externalId>true</externalId>
        <label>Token</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Visits__c</fullName>
        <description>How many times someone has visited this Incentive&apos;s unique link.</description>
        <label>Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Incentive</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Incentive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>